# open-research-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-05-09-ora-v0-implementation.md  2026-05-12-ora-live-progress-implementation.md  2026-05-13-ora-intensity-4-5-implementation.md
docs/superpowers/specs/: 2026-05-09-ora-v0-design.md  2026-05-12-ora-live-progress-design.md  2026-05-13-ora-intensity-4-5-design.md
ora/: __init__.py  __main__.py  cli.py  config.py  graph.py  progress.py  state.py
ora/agents/: researcher.py  reviewer.py  supervisor.py  writer.py
ora/prompts/: __init__.py  extractor.py  researcher.py  reviewer.py  supervisor.py  writer.py
ora/tools/: evaluate.py  extract.py  scrape.py  search.py
tests/: test_cli.py  test_config.py  test_evaluate.py  test_extract.py  test_graph.py  test_integration.py  test_package_metadata.py  test_progress.py  test_researcher.py  test_researcher_intensity.py  test_researcher_progress.py  test_reviewer.py  test_search.py  test_state.py  test_writer_progress.py
