[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-research-agent"
version = "0.1.0"
description = "Open Research Agent - multi-agent research with adversarial review"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["research", "multi-agent", "langgraph", "langchain", "firecrawl", "deepseek"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.3.0",
    "langchain-openai>=0.3.0",

    "langchain-core>=0.3.0",
    "firecrawl-py>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/cameronmpalmer/open-research-agent"
Repository = "https://github.com/cameronmpalmer/open-research-agent"
Issues = "https://github.com/cameronmpalmer/open-research-agent/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[project.scripts]
open-research-agent = "ora.cli:main"
ora = "ora.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ora"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::langchain_core._api.deprecation.LangChainPendingDeprecationWarning",
]
